--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,5 +1,10 @@
-<h3>新規投稿</h3>
-<%= form_for @food do |f| %>
+<h3>お店を投稿する</h3>
+<div class=new>
+  <div class="top">
+   <%= link_to "TOPへ", root_path %>
+  </div>
+
+ <%= form_for @food do |f| %>
 
   <div class="field">
     <%= f.label :name %>
@@ -28,7 +33,7 @@
   <div class="field">
  
     <span class="image-top">
-      <%= f.label :image_top, '画像' %>
+      <%= f.label :image_top, 'Photo' %>
       <%= f.file_field :image_top, accept: "image/jpeg,image/gif,image/png" %>
     </span>
     <script type="text/javascript">
@@ -40,40 +45,46 @@
     </script>
   </div>
 
-<div class="field">
-<%= f.label :bistro_genre  %>
-<%= f.select :bistro_genre, 
-[["定食屋", "定食屋"], 
-["レストラン", "レストラン"], 
-["居酒屋", "居酒屋"],
-["カフェ", "カフェ"]], include_blank: "選択して下さい" %>
-</div>
+  <div class="field">
+   <%= f.label :bistro_genre  %>
+   <%= f.select :bistro_genre, 
+    [["定食屋", "定食屋"], 
+    ["レストラン", "レストラン"], 
+    ["居酒屋", "居酒屋"],
+    ["カフェ", "カフェ"]], include_blank: "選択して下さい" %>
+  </div>
 
-<div class='form-group'>
-<%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name) do |tag| %>
+  <div class='form-group'>
+   <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name) do |tag| %>
     <div class='form-check'>
         <%= tag.label class: 'form-check-label' do %>
             <%= tag.check_box class: 'form-check-input' %>
             <%= tag.text %>
         <% end %>
     </div>
-<% end %>
+   <% end %>
+  </div>
+ <% end %>
+
+
+
+<div class="field">
+Map
 </div>
-
-<%= f.label :lat,"緯度" %>
-    <%= f.text_field :lat,:value =>"緯度", id: :lat %>
-    <%= f.label :lng,"経度" %>
-    <%= f.text_field :lng,:value =>"経度", id: :lng %>
-
-<%= f.submit "投稿する" %>
-<% end %>
-
-
-<h2>Map</h2>
 
 <input id="address" type="textbox" value="">
 <input type="button" value="検索" onclick="codeAddress()">
 <p>マーカーをドラック＆ドロップで位置の調整ができます。<p>
+<%= form_for @food do |f| %>
+  <div class=form-group>
+   <%= f.label :lat,"緯度" %>
+     <%= f.text_field :lat,:value =>"緯度", id: :lat %>
+     <%= f.label :lng,"経度" %>
+     <%= f.text_field :lng,:value =>"経度", id: :lng %>
+ 
+   <%= f.submit "投稿する" %>
+  </div>
+ <% end %>
 <div id='map'></div>
 
 <style>
@@ -140,3 +151,7 @@ function codeAddress(){
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDN1Mp6wqIolbGWzvyJGwvumdqUgesl8jI&callback=initMap" async defer></script>
 
     <%= link_to "一覧に戻る", foods_path %>
+    <br>
+    <br>
+    <br>
+</div>
