--- a/app/views/foods/tag.html.erb
+++ b/app/views/foods/tag.html.erb
@@ -1,16 +1,30 @@
-タグ検索
-<%= form_tag({ controller: "foods", action: "tag" }, method: :get) do %>
+<div class=tag>
+ <div class=tag-title>
+  タグ検索
+ </div>
+
+ <div class=tag-top>
+  <%= link_to "TOPへ", root_path %>
+ </div>
+
+ <div class=tag-a>
+  <%= form_tag({ controller: "foods", action: "tag" }, method: :get) do %>
     <% Tag.all.each do |t| %>
         <li><%= check_box_tag 'tag_ids[]', t.id %><%= t.name %></li>
     <% end %>
     <%= submit_tag '検索' %>
-<% end %>
+  <% end %>
 
-<%= form_tag({controller:"foods",action:"tag"}, method: :get) do %>
+  <%= form_tag({controller:"foods",action:"tag"}, method: :get) do %>
     <%= text_field_tag :tag %>
     <%= submit_tag 'タグを追加' %>
-<% end %>
+    <br>
+    <br>
+    <br>
+  <% end %>
 
-<% @foods.each do |food| %>
+  <% @foods.each do |food| %>
     <p><%= food.name %></p>
-<% end %>
+  <% end %>
+ <div/>
+</div>
