--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -50,4 +50,6 @@
 
 <div> <%= button_to "アカウント削除", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
 
-<%= link_to "戻る", :back %>
+<%= link_to "戻る", user_path(current_user.id) %>
+<br>
+<br>
